<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragment.GraphFragment">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/graph_LineChart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/k_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/m_textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/k_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/k"
        android:textColor="@color/dark_grey"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/graph_LineChart" />

    <TextView
        android:id="@+id/m_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/m"
        android:textColor="@color/dark_grey"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/graph_LineChart" />

    <TextView
        android:id="@+id/criteria_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criteria"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/criteriaValue_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/criteria_textView"
        app:layout_constraintTop_toTopOf="@+id/criteria_textView"
        tools:text="1.0" />

    <TextView
        android:id="@+id/matrix_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matrix"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/matrixValue_textView"
        app:layout_constraintTop_toTopOf="@+id/matrixValue_textView" />

    <TextView
        android:id="@+id/matrixValue_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:text="2.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/space"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>